@@ -12,6 +12,7 @@
 	- add debug sub-package patch.
 	- re-add elfutils/libdwarf (for dwarf.h), eliminate tools/dwarf2.h.
 	- resurrect genhdlist "greased lightning" pathway for now.
+	- elfutils: avoid gcc-3.2 ICE on x86_64 for now.
 
 4.0.4 -> 4.1:
 	- loosely wire beecrypt library into rpm.
